--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
   "name": "hymnchooser",
   "version": "1.0.0",
+  "type":"module",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sharedordaz/HymnChooser.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sharedordaz/HymnChooser/issues"
+  },
+  "homepage": "https://github.com/sharedordaz/HymnChooser#readme",
+  "dependencies": {
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11"
+  }
 }
